[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aider-chat"
version = "0.1.0"
description = "Aider is AI pair programming in your terminal"
requires-python = ">=3.10"  # Changed to be more permissive
dependencies = [
    "prompt_toolkit",
    "pygments",
    "rich",
    "fastapi[all]",
    "uvicorn",
    "packaging"
]

[project.scripts]
aider = "aider.main:main"
